# codex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  numbering_formats.rs  numeral_systems.rs  shared.rs  styling.rs
src/modules/: emoji.txt  sym.txt
