[package]
name = "codex"
version = "0.1.1"
authors = ["The Typst Project Developers"]
edition = "2021"
description = "Human-friendly notation for Unicode symbols."
repository = "https://github.com/typst/codex"
readme = "README.md"
license = "Apache-2.0"
categories = ["encoding", "text-processing"]
keywords = ["unicode", "symbols"]

[features]
default = ["styling", "numbering-formats"]
numbering-formats = ["chinese-number", "ecow"]
styling = []

[dependencies]
chinese-number = { version = "0.7.7", default-features = false, features = ["number-to-chinese"], optional = true }
ecow = { version = "0.2.6", optional = true }
