[package]
name = "codex"
version = "0.2.0"
authors = ["The Typst Project Developers"]
edition = "2021"
description = "Human-friendly notation for Unicode symbols."
repository = "https://github.com/typst/codex"
readme = "README.md"
license = "Apache-2.0"
categories = ["encoding", "text-processing"]
keywords = ["unicode", "symbols"]

[features]
default = ["styling"]
styling = []
_test-unicode-conformance = ["ureq"]

[build-dependencies]
ureq = { version = "3.0.12", optional = true }
